# PathTracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
example-scenes-cg22/cornell-box/: cornell-box.mtl
include/: AABB.h  BVH.h  ConfigHelper.h  Displayer.h  Environment.h  Material.h  Mesh.h  Point.h  Ray.h  RenderWidget.h  Scene.h  Texture.h  Triangle.h  UtilsHelper.h  camera.h
include/tinyxml2/: CMakeLists.txt
src/: AABB.cpp  BVH.cpp  Displayer.cpp  Environment.cpp  Material.cpp  Mesh.cpp  Point.cpp  Ray.cpp  RenderWidget.cpp  Scene.cpp  Texture.cpp  Triangle.cpp  camera.cpp  main.cpp
